# DCPP-TaskManager

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py
project/: CMakeLists.txt
project/include/: task.h  taskmanager.h  thread.h
project/src/: taskmanager.cpp  thread.cpp
sources/: CMakeLists.txt
sources/include/: task.h  taskmanager.h  thread.h
sources/src/: task.cpp  taskmanager.cpp  thread.cpp
test/: CMakeLists.txt
test/lambda_tasks/: CMakeLists.txt  test_lambda_tasks.cpp
test/src/: main.cpp
